material design done

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -54,3 +54,26 @@ li {
   width: 250px;
   margin-left: 6px;
 }
+
+#step-7 img {
+  height: 280px;
+}
+
+#step-8 img {
+  height: 280px;
+}
+
+#step-9 img {
+  margin-top: 15px;
+  width: 250px;
+  margin-left: 6px;
+}
+
+#step-10 img {
+  margin-right: 30px;
+}
+
+#step-12 img {
+  margin-top: 10px;
+  margin-left: 15px;
+}
